dropshot/tests/fail/bad_server_channel8.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
 --> tests/fail/bad_server_channel8.rs:9:7
  |
9 | trait MyServer {
  |       ^^^^^^^^

error: endpoint `bad_channel` must be async
  --> tests/fail/bad_server_channel8.rs:16:5
   |
16 |     fn bad_channel(
   |     ^^
